--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
 </head>
 
 <body>
-
+  <body>
+    <div class="jumbotron mb-100"="jumbotron">
+      <img class="mx-auto d-block " src="img/logoBig.png" alt="logo" />
+      <div class="text-light" </div>
+        <h1>We Provide The Best Food<br>At The <strong>Right Price</strong></h1>
+      </div>
+    </div>
 </body>
 
 </html>
