--- a/index.html
+++ b/index.html
@@ -21,104 +21,104 @@
       </div>
     </div>
     <div class="text-light row  p-0 m-0" id="happyhour">
-        <div class="col-md-3">
-          <div class="row text-dark m-auto align-self-center">Happy Hour</div>
-          <div class="row" id="partytime">Party Time</div>
-        </div>
-        <div class="col-md-3" id="Breakfast"><em>Breakfast</em></div>
-        <div class="col-md-3" id="Lunch"><em>Lunch</em></div>
-        <div class="col-md d-flex" id="dinner"><em>Dinner</em></div>
-
+      <div class="col-md-3">
+        <div class="row text-dark m-auto align-self-center">Happy Hour</div>
+        <div class="row" id="partytime">Party Time</div>
       </div>
-      <div class="container">
-        <div class="w-60 m-auto row">
-          <div class="img-thumbnail flex-column col-6 ml-auto">
-            <div class="">
-              <img class="img" src="img/fastFood1.jpg" alt="fast food 1">
-            </div>
-            <div class="">
-              <img class="img-fluid" src="img/fastFood2.jpg" alt="fast food 2">
-            </div>
-          </div>
-          <div class="col-4 pl-4 p-2 ml-auto">
-            <h1 class="pb-2">Fast Food</h1>
-            <h3 class="pb-2">You'll love our delicious foods</h3>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-              irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-            <button class="btn btn-outline-warning align-self-bottom" type="button" name="button">view galarey</button>
-          </div>
-        </div>
-        <div class="w-75 m-auto row">
-          <div class="col-6 pl-5 p-2 ml-auto">
-            <h1 class="pb-2">Drinks</h1>
-            <h3 class="pb-2">We also produce delicious drinks</h3>
-            <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-              irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-            <button class="btn btn-outline-warning align-self-bottom" type="button" name="button">view galarey</button>
-          </div>
-          <div class="img-thumbnail d-flex col-6 ml-auto">
-            <div class="h-100">
-              <img class="img-fluid" src="img/drink1.jpg" alt="fast food 1">
-            </div>
-            <div class="h-100">
-              <img class="img-fluid" src="img/drink2.jpg" alt="fast food 2">
-            </div>
-          </div>
-        </div>
-        <div class="jumbotron p-5 coral" id="jumbotron-menu-nav">
-          <div class="container p-0 m-5 text-center bg-white" id="inner-menu">
-            <div class="d-flex">
-              <div class="flex-fill p-2">
-                <span class="align-self-center">Fast Food</span>
-              </div>
-              <div class="flex-fill p-3 border border-secondary bg-grey">
-                <span class="align-self-center">Drinks</span>
-              </div>
-              <div class="flex-fill p-3 border border-secondary bg-grey">
-                <span class="align-self-center">Chicken</span>
-              </div>
-              <div class="flex-fill p-3 border border-secondary bg-grey">
-                <span class="align-self-center">Rice</span>
-              </div>
-            </div>
-            <div class="p-2 ">
-              <span></span>
-              <div class="card-deck p-5 ml-4 mr-4">
-                <div class="card">
-                  <img src="img/fastfood/chickenBurger.jpg" alt="chicken burger">
-                </div>
-                <div class="card">
-                  <img src="img/fastfood/beefBurger.jpg" alt="Beef burger">
-                </div>
-                <div class="card">
-                  <img src="img/fastfood/chickenPizza.jpg" alt="chicken pizza">
-                </div>
-              </div>
-              <span></span>
-            </div>
-          </div>
-        </div>
+      <div class="col-md-3" id="Breakfast"><em>Breakfast</em></div>
+      <div class="col-md-3" id="Lunch"><em>Lunch</em></div>
+      <div class="col-md d-flex" id="dinner"><em>Dinner</em></div>
 
-        <div class="text-center row m-0 p-0 w-60 " id="reviews">
-          <div class="col-7">
-            <h3 class="Markazi">Our Happy Customers</h3>
-            <h4>George Richard</h4>
-            <p class="text-secondary">Great Food! The menu is awesome, their foods are not only great but at the right price too! I highly recomend them :)</p>
-            <div class="">
-              <span><i class="fas fa-angle-left p-3"></i></span>
-              <img src="img/customers/p1.png" alt="customer one">
-              <img src="img/customers/p2.png" alt="customer two">
-              <img src="img/customers/p3.png" alt="customer three">
-              <span><i class="fas fa-angle-right p-3"></i></span>
-            </div>
+    </div>
+    <div class="container">
+      <div class="w-60 m-auto row">
+        <div class="img-thumbnail flex-column col-6 ml-auto">
+          <div class="">
+            <img class="img" src="img/fastFood1.jpg" alt="fast food 1">
           </div>
-          <div class="col-5">
-            <h3 class="Markazi">About Menu</h3>
-            <p class="border-left border-secondary text-secondary">We are a little team of seven members. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-              ex ea commodo consequat. </p>
+          <div class="">
+            <img class="img-fluid" src="img/fastFood2.jpg" alt="fast food 2">
           </div>
         </div>
-        <br>
+        <div class="col-4 pl-4 p-2 ml-auto">
+          <h1 class="pb-2">Fast Food</h1>
+          <h3 class="pb-2">You'll love our delicious foods</h3>
+          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+          <button class="btn btn-outline-warning align-self-bottom" type="button" name="button">view galarey</button>
+        </div>
+      </div>
+      <div class="w-75 m-auto row">
+        <div class="col-6 pl-5 p-2 ml-auto">
+          <h1 class="pb-2">Drinks</h1>
+          <h3 class="pb-2">We also produce delicious drinks</h3>
+          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+          <button class="btn btn-outline-warning align-self-bottom" type="button" name="button">view galarey</button>
+        </div>
+        <div class="img-thumbnail d-flex col-6 ml-auto">
+          <div class="h-100">
+            <img class="img-fluid" src="img/drink1.jpg" alt="fast food 1">
+          </div>
+          <div class="h-100">
+            <img class="img-fluid" src="img/drink2.jpg" alt="fast food 2">
+          </div>
+        </div>
+      </div>
+      <div class="jumbotron text-center" id="jumbotron-center">
+      <div class="ml-5 mr-5">
+        <div class="row m-0 p-0 bg-lavender">
+          <div class="bg-light col-md p-0">
+            <h2 class="coral pt-3 pb-3 m-0 border border-secondary">Fast Food</h2>
+          </div>
+          <div class="col-md p-0">
+            <h2 class="text-dark pt-3 pb-3 m-0 border border-secondary">Drinks</h2>
+          </div>
+          <div class="col-md p-0">
+            <h2 class="text-dark pt-3 pb-3 m-0 border border-secondary">Chicken</h2>
+          </div>
+          <div class="col-md p-0">
+            <h2 class="text-dark pt-3 pb-3 m-0 border border-secondary">Rice</h2>
+          </div>
+        </div>
+      </div>
+      <div class="bg-light ml-5 mr-5">
+        <span></span>
+        <div class="card-deck p-5">
+          <div class="card">
+            <img class="card-img-top" src="img/fastfood/chickenBurger.jpg" alt="">
+            <p class="coral coral-sm m-0 p-2">Chicken Burger</p>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="img/fastfood/beefBurger.jpg" alt="">
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="img/fastfood/chickenPizza.jpg" alt="">
+          </div>
+        </div>
+        <span></span>
+      </div>
+
+      <div class="text-center row m-0 p-0 w-60 " id="reviews">
+        <div class="col-7">
+          <h3 class="Markazi">Our Happy Customers</h3>
+          <h4>George Richard</h4>
+          <p class="text-secondary">Great Food! The menu is awesome, their foods are not only great but at the right price too! I highly recomend them :)</p>
+          <div class="">
+            <span><i class="fas fa-angle-left p-3"></i></span>
+            <img src="img/customers/p1.png" alt="customer one">
+            <img src="img/customers/p2.png" alt="customer two">
+            <img src="img/customers/p3.png" alt="customer three">
+            <span><i class="fas fa-angle-right p-3"></i></span>
+          </div>
+        </div>
+        <div class="col-5">
+          <h3 class="Markazi">About Menu</h3>
+          <p class="border-left border-secondary text-secondary">We are a little team of seven members. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+            ex ea commodo consequat. </p>
+        </div>
+      </div>
+      <br>
   </body>
 
 </html>
