--- a/index.html
+++ b/index.html
@@ -66,59 +66,59 @@
         </div>
       </div>
       <div class="jumbotron text-center" id="jumbotron-center">
-      <div class="ml-5 mr-5">
-        <div class="row m-0 p-0 bg-lavender">
-          <div class="bg-light col-md p-0">
-            <h2 class="coral pt-3 pb-3 m-0 border border-secondary">Fast Food</h2>
-          </div>
-          <div class="col-md p-0">
-            <h2 class="text-dark pt-3 pb-3 m-0 border border-secondary">Drinks</h2>
-          </div>
-          <div class="col-md p-0">
-            <h2 class="text-dark pt-3 pb-3 m-0 border border-secondary">Chicken</h2>
-          </div>
-          <div class="col-md p-0">
-            <h2 class="text-dark pt-3 pb-3 m-0 border border-secondary">Rice</h2>
-          </div>
-        </div>
-      </div>
-      <div class="bg-light ml-5 mr-5">
-        <span></span>
-        <div class="card-deck p-5">
-          <div class="card">
-            <img class="card-img-top" src="img/fastfood/chickenBurger.jpg" alt="">
-            <p class="coral coral-sm m-0 p-2">Chicken Burger</p>
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="img/fastfood/beefBurger.jpg" alt="">
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="img/fastfood/chickenPizza.jpg" alt="">
+        <div class="ml-5 mr-5">
+          <div class="row m-0 p-0 bg-lavender">
+            <div class="bg-light col-md p-0">
+              <h2 class="coral pt-3 pb-3 m-0 border border-secondary">Fast Food</h2>
+            </div>
+            <div class="col-md p-0">
+              <h2 class="text-dark pt-3 pb-3 m-0 border border-secondary">Drinks</h2>
+            </div>
+            <div class="col-md p-0">
+              <h2 class="text-dark pt-3 pb-3 m-0 border border-secondary">Chicken</h2>
+            </div>
+            <div class="col-md p-0">
+              <h2 class="text-dark pt-3 pb-3 m-0 border border-secondary">Rice</h2>
+            </div>
           </div>
         </div>
-        <span></span>
-      </div>
+        <div class="bg-light ml-5 mr-5">
+          <span></span>
+          <div class="card-deck p-5">
+            <div class="card">
+              <img class="card-img-top" src="img/fastfood/chickenBurger.jpg" alt="">
+              <p class="coral coral-sm m-0 p-2">Chicken Burger</p>
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="img/fastfood/beefBurger.jpg" alt="">
+            </div>
+            <div class="card">
+              <img class="card-img-top" src="img/fastfood/chickenPizza.jpg" alt="">
+            </div>
+          </div>
+          <span></span>
+        </div>
 
-      <div class="text-center row m-0 p-0 w-60 " id="reviews">
-        <div class="col-7">
-          <h3 class="Markazi">Our Happy Customers</h3>
-          <h4>George Richard</h4>
-          <p class="text-secondary">Great Food! The menu is awesome, their foods are not only great but at the right price too! I highly recomend them :)</p>
-          <div class="">
-            <span><i class="fas fa-angle-left p-3"></i></span>
-            <img src="img/customers/p1.png" alt="customer one">
-            <img src="img/customers/p2.png" alt="customer two">
-            <img src="img/customers/p3.png" alt="customer three">
-            <span><i class="fas fa-angle-right p-3"></i></span>
+        <div class="text-center row m-0 p-0 w-60 " id="reviews">
+          <div class="col-7">
+            <h3 class="Markazi">Our Happy Customers</h3>
+            <h4>George Richard</h4>
+            <p class="text-secondary">Great Food! The menu is awesome, their foods are not only great but at the right price too! I highly recomend them :)</p>
+            <div class="">
+              <span><i class="fas fa-angle-left p-3"></i></span>
+              <img src="img/customers/p1.png" alt="customer one">
+              <img src="img/customers/p2.png" alt="customer two">
+              <img src="img/customers/p3.png" alt="customer three">
+              <span><i class="fas fa-angle-right p-3"></i></span>
+            </div>
+          </div>
+          <div class="col-5">
+            <h3 class="Markazi">About Menu</h3>
+            <p class="border-left border-secondary text-secondary">We are a little team of seven members. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+              aliquip ex ea commodo consequat. </p>
           </div>
         </div>
-        <div class="col-5">
-          <h3 class="Markazi">About Menu</h3>
-          <p class="border-left border-secondary text-secondary">We are a little team of seven members. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-            ex ea commodo consequat. </p>
-        </div>
-      </div>
-      <br>
+        <br>
   </body>
 
 </html>
