--- a/index.html
+++ b/index.html
@@ -12,49 +12,49 @@
 </head>
 
 <body>
-
-  <body>
-    <div class="jumbotron mb-100"="jumbotron">
-      <img class="mx-auto d-block " src="img/logoBig.png" alt="logo" />
-      <div class="text-light" </div>
-        <h1>We Provide The Best Food<br>At The <strong>Right Price</strong></h1>
-      </div>
+  <div class="jumbotron mb-0" id="jumbotron-header">
+    <img class="mx-auto d-block " src="img/logoBig.png" alt="logo" />
+    <div class="text-light" </div>
+      <h1>We Provide The Best Food<br>At The <strong>Right Price</strong></h1>
     </div>
-    <div class="text-light row  p-0 m-0" id="happyhour">
-      <div class="col-md-3">
-        <div class="row text-dark m-auto align-self-center">Happy Hour</div>
-        <div class="row" id="partytime">Party Time</div>
+  </div>
+  <div class="text-light row  p-0 m-0" id="happyhour">
+    <div class="col-md-3">
+      <div class="row text-dark" id="Age">Happy Hour</div>
+      <div class="row" id=partytime>Party Time</div>
+    </div>
+    <div class="col-md-3" id="Breakfast"><em>Breakfast</em></div>
+    <div class="col-md-3" id="Lunch"><em>Lunch</em></div>
+    <div class="col-md-3" id="dinner"><em>Dinner</em></div>
+  </div>
+  <br>
+  <br>
+  <div class="container">
+    <div class="text-dark row">
+      <div class="w-6 img-thumbnail p-4 img-shadow">
+        <div class="m-auto">
+          <img class="img-fluid" src="img/fastFood1.jpg" alt="fast food 1">
+        </div>
+        <div class="m-auto">
+          <img class="img-fluid" src="img/fastFood2.jpg" alt="fast food 2">
+        </div>
       </div>
-      <div class="col-md-3" id="Breakfast"><em>Breakfast</em></div>
-      <div class="col-md-3" id="Lunch"><em>Lunch</em></div>
-      <div class="col-md d-flex" id="dinner"><em>Dinner</em></div>
-
+      <div class="col-md-6 p-5">
+        <h2 class="pb-2">Fast Food</h2>
+        <h3 class="pb-2">You'll love our delicious foods</h3>
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+          irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+      <button class="btn btn-outline-warning align-self-bottom" type="button" name="button">view Gallery</button>
+      </div>
     </div>
     <div class="container">
-      <div class="w-60 m-auto row">
-        <div class="img-thumbnail flex-column col-6 ml-auto">
-          <div class="">
-            <img class="img" src="img/fastFood1.jpg" alt="fast food 1">
-          </div>
-          <div class="">
-            <img class="img-fluid" src="img/fastFood2.jpg" alt="fast food 2">
-          </div>
-        </div>
-        <div class="col-4 pl-4 p-2 ml-auto">
-          <h1 class="pb-2">Fast Food</h1>
-          <h3 class="pb-2">You'll love our delicious foods</h3>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-          <button class="btn btn-outline-warning align-self-bottom" type="button" name="button">view galarey</button>
-        </div>
-      </div>
-      <div class="w-75 m-auto row">
-        <div class="col-6 pl-5 p-2 ml-auto">
+      <div class="text-dark row">
+        <div class="col-md-6 p-5 text-align-left">
           <h1 class="pb-2">Drinks</h1>
           <h3 class="pb-2">We also produce delicious drinks</h3>
           <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
             irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-          <button class="btn btn-outline-warning align-self-bottom" type="button" name="button">view galarey</button>
+          <button class="btn btn-outline-warning align-self-bottom" type="button" name="button">view Gallery</button>
         </div>
         <div class="img-thumbnail d-flex col-6 ml-auto">
           <div class="h-100">
@@ -65,9 +65,10 @@
           </div>
         </div>
       </div>
-      <div class="jumbotron text-center" id="jumbotron-center">
+      <br> B
+      <div class="jumbotron-fluid text-center" id="jumbotron-center">
         <div class="ml-5 mr-5">
-          <div class="row m-0 p-0 bg-lavender">
+          <div class="row m-0 p-0 bg-galarey">
             <div class="bg-light col-md p-0">
               <h2 class="coral pt-3 pb-3 m-0 border border-secondary">Fast Food</h2>
             </div>
@@ -98,6 +99,9 @@
           </div>
           <span></span>
         </div>
+        <br>
+        <br>
+        <br>
 
         <div class="text-center row m-0 p-0 w-60 " id="reviews">
           <div class="col-7">
@@ -118,7 +122,32 @@
               aliquip ex ea commodo consequat. </p>
           </div>
         </div>
-        <br>
-  </body>
+      </div>
+
+      <div class="jumbotron-fluid" id="subscribe">
+        <form class="form-iline">
+          <div class="text-center form"></div>
+          <div class="pt-5 mt-5 pb-3 text-align-center">
+            <//form>
+            <h3>Get our Daily Food Items Delivered to your email</h3>
+            <div class="form-group mb-5 pb-5">
+              <input type="subscibe" name "" placeholder="youremail" <button type="subscribe" class="btn btn-white">subscribe</button>
+            </div>
+          </div>
+          <p>MENU<br> Thats what we are<br></p>
+          <br>
+          <div class="jumbotron-fluid" id="footer">
+            <div class="footer-menu background-img">
+              <div class="Tocenter">
+                <h2<img src="/img/footerlogos/logo_white.png" alt=""<MENU</h2>
+                <p>Thats is what we are</p>
+              </div>
+
+            </div>
+
+          </div>
+
+      </div>
+</body>
 
 </html>
