--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class="jumbotron mb-0" id="jumbotron-header">
     <img class="mx-auto d-block " src="img/logoBig.png" alt="logo" />
-    <div class="text-light" </div>
+    <div class="text-light" text-align="center">
       <h1>We Provide The Best Food<br>At The <strong>Right Price</strong></h1>
     </div>
   </div>
@@ -44,7 +44,7 @@
         <h3 class="pb-2">You'll love our delicious foods</h3>
         <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
           irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
-      <button class="btn btn-outline-warning align-self-bottom" type="button" name="button">view Gallery</button>
+        <button class="btn btn-outline-warning align-self-bottom" type="button" name="button">view Gallery</button>
       </div>
     </div>
     <div class="container">
@@ -139,8 +139,8 @@
           <div class="jumbotron-fluid" id="footer">
             <div class="footer-menu background-img">
               <div class="Tocenter">
-                <h2<img src="/img/footerlogos/logo_white.png" alt=""<MENU</h2>
-                <p>Thats is what we are</p>
+                <h2<img src="/img/footerlogos/logo_white.png" alt="" <MENU</h2>
+                  <p>Thats is what we are</p>
               </div>
 
             </div>
