changes to subscribe section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="js/scripts.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Gaegu|Markazi+Text" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
-  
+
   <title>Anita's Kitchen</title>
 </head>
 
@@ -126,15 +126,19 @@
       </div>
 
       <div class="jumbotron-fluid" id="subscribe">
-        <form class="form-iline">
-          <div class="text-center form"></div>
+        <form class="form-inline">
+          <div class="text-center form">
           <div class="pt-5 mt-5 pb-3 text-align-center">
-            <//form>
+
             <h3>Get our Daily Food Items Delivered to your email</h3>
             <div class="form-group mb-5 pb-5">
-              <input type="subscibe" name "" placeholder="youremail" <button type="subscribe" class="btn btn-white">subscribe</button>
+              <input type="text"placeholder="your email" class="btn btn-white"><button>subscribe</button>
+
+
             </div>
           </div>
+        </form>
+        </div>
           <p>MENU<br> Thats what we are<br></p>
           <br>
           <div class="jumbotron-fluid" id="footer">
@@ -148,7 +152,7 @@
 
           </div>
 
-      </div>
+
 </body>
 
 </html>
