--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <div class="jumbotron mb-0" id="jumbotron-header">
     <img class="mx-auto d-block " src="img/logoBig.png" alt="logo" />
     <div class="text-light" text-align="center">
-      <h1>We Provide The Best Food<br>At The <strong>Right Price</strong></h1>
+        <marquee behavior="alternate"> <h1> We Provide The Best Food<br>At The <strong>Right Price</strong></h1></marquee>
+     
     </div>
   </div>
   <div class="text-light row  p-0 m-0" id="happyhour">
@@ -132,8 +133,7 @@
 
             <h3>Get our Daily Food Items Delivered to your email</h3>
             <div class="form-group mb-5 pb-5">
-              <input type="text"placeholder="your email" class="btn btn-white"><button>subscribe</button>
-
+              <input type="text" placeholder="your email" class="btn btn-white"><button>subscribe</button>
 
             </div>
           </div>
