--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 
 <head>
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+    crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Gaegu|Markazi+Text" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
@@ -16,8 +18,13 @@
   <div class="jumbotron mb-0" id="jumbotron-header">
     <img class="mx-auto d-block " src="img/logoBig.png" alt="logo" />
     <div class="text-light" text-align="center">
-        <marquee behavior="alternate"> <h1> We Provide The Best Food<br>At The <strong>Right Price</strong></h1></marquee>
-     
+      <marquee behavior="alternate">
+        <h1> We Provide The Best Food
+          <br>At The
+          <strong>Right Price</strong>
+        </h1>
+      </marquee>
+
     </div>
   </div>
   <div class="text-light row  p-0 m-0" id="happyhour">
@@ -25,9 +32,15 @@
       <div class="row text-dark" id="Age">Happy Hour</div>
       <div class="row" id=partytime>Party Time</div>
     </div>
-    <div class="col-md-3" id="Breakfast"><em>Breakfast</em></div>
-    <div class="col-md-3" id="Lunch"><em>Lunch</em></div>
-    <div class="col-md-3" id="dinner"><em>Dinner</em></div>
+    <div class="col-md-3" id="Breakfast">
+      <em>Breakfast</em>
+    </div>
+    <div class="col-md-3" id="Lunch">
+      <em>Lunch</em>
+    </div>
+    <div class="col-md-3" id="dinner">
+      <em>Dinner</em>
+    </div>
   </div>
   <br>
   <br>
@@ -44,8 +57,10 @@
       <div class="col-md-6 p-5">
         <h2 class="pb-2">Fast Food</h2>
         <h3 class="pb-2">You'll love our delicious foods</h3>
-        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-          irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+          aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
+          sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
         <button class="btn btn-outline-warning align-self-bottom" type="button" name="button">view Gallery</button>
       </div>
     </div>
@@ -54,8 +69,11 @@
         <div class="col-md-6 p-5 text-align-left">
           <h1 class="pb-2">Drinks</h1>
           <h3 class="pb-2">We also produce delicious drinks</h3>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-            irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
           <button class="btn btn-outline-warning align-self-bottom" type="button" name="button">view Gallery</button>
         </div>
         <div class="img-thumbnail d-flex col-6 ml-auto">
@@ -109,19 +127,25 @@
           <div class="col-7">
             <h3 class="Markazi">Our Happy Customers</h3>
             <h4>George Richard</h4>
-            <p class="text-secondary">Great Food! The menu is awesome, their foods are not only great but at the right price too! I highly recomend them :)</p>
+            <p class="text-secondary">Great Food! The menu is awesome, their foods are not only great but at the right price too! I highly recomend
+              them :)</p>
             <div class="">
-              <span><i class="fas fa-angle-left p-3"></i></span>
+              <span>
+                <i class="fas fa-angle-left p-3"></i>
+              </span>
               <img src="img/customers/p1.png" alt="customer one">
               <img src="img/customers/p2.png" alt="customer two">
               <img src="img/customers/p3.png" alt="customer three">
-              <span><i class="fas fa-angle-right p-3"></i></span>
+              <span>
+                <i class="fas fa-angle-right p-3"></i>
+              </span>
             </div>
           </div>
           <div class="col-5">
             <h3 class="Markazi">About Menu</h3>
-            <p class="border-left border-secondary text-secondary">We are a little team of seven members. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-              aliquip ex ea commodo consequat. </p>
+            <p class="border-left border-secondary text-secondary">We are a little team of seven members. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+              tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+              laboris nisi ut aliquip ex ea commodo consequat. </p>
           </div>
         </div>
       </div>
@@ -129,28 +153,32 @@
       <div class="jumbotron-fluid" id="subscribe">
         <form class="form-inline">
           <div class="text-center form">
-          <div class="pt-5 mt-5 pb-3 text-align-center">
+            <div class="pt-5 mt-5 pb-3 text-align-center">
 
-            <h3>Get our Daily Food Items Delivered to your email</h3>
-            <div class="form-group mb-5 pb-5">
-              <input type="text" placeholder="your email" class="btn btn-white"><button>subscribe</button>
+              <h3>Get our Daily Food Items Delivered to your email</h3>
+              <div class="form-group mb-5 pb-5">
+                <input type="text" placeholder="your email" class="btn btn-white">
+                <button>subscribe</button>
 
+              </div>
             </div>
-          </div>
         </form>
         </div>
-          <p>MENU<br> Thats what we are<br></p>
+        <p>MENU
+          <br> Thats what we are
           <br>
-          <div class="jumbotron-fluid" id="footer">
-            <div class="footer-menu background-img">
-              <div class="Tocenter">
-                <h2<img src="/img/footerlogos/logo_white.png" alt="" <MENU</h2>
-                  <p>Thats is what we are</p>
-              </div>
-
+        </p>
+        <br>
+        <div class="jumbotron-fluid" id="footer">
+          <div class="footer-menu background-img">
+            <div class="Tocenter">
+              <h2<img src="/img/footerlogos/logo_white.png" alt="" <MENU</h2>
+                <p>Thats is what we are</p>
             </div>
 
           </div>
+
+        </div>
 
 
 </body>
